@@ -14,6 +14,8 @@ public class RepresentationArea extends PNode {
             setOffset( 0, -80 );
         }} );
         addChild( new PieSetFractionNode( numerator, denominator, chosenRepresentation.valueEquals( ChosenRepresentation.PIE ) ) );
-        addChild( new NumberLineNode( numerator, denominator, chosenRepresentation.valueEquals( ChosenRepresentation.NUMBER_LINE ) ) );
+        addChild( new NumberLineNode( numerator, denominator, chosenRepresentation.valueEquals( ChosenRepresentation.NUMBER_LINE ) ) {{
+            setOffset( 10, 20 );
+        }} );
     }
 }
