@@ -1,3 +1,4 @@
+Fixed for number line
 # 0.00.09 (58684) Nov 16, 2011
 Added more revisions for intro tab
 Matching game: Added horizontal and vertical bars
